Update resume after amazon internship
Also added volume warning to cascadingstyleshoots (apologies to that one
interviewer xd)

--- a/cascadingstyleshoots/index.html
+++ b/cascadingstyleshoots/index.html
@@ -61,7 +61,7 @@
         <h2>How to play:</h2>
         <p>
           WASD to move. Space to move slower. Hit the enemy. Don't get hit.
-          Utilize the power of CSS to your advantage.
+          Utilize the power of CSS to your advantage. (Volume warning!)
         </p>
       </section>
     </main>
